[package]
name = "lightning-server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
actix = "0.13.5"
actix-web = "4.11.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres"] }
chrono = "0.4.41"
serde_json = "1.0.140"
